# sqlx-paginated

./: Cargo.toml  LICENSE.md  README.md  flake.nix
.github/workflows/: publish.yml  rust.yml
src/: lib.rs
src/paginated_query_as/: macro.rs  mod.rs  models.rs  utils.rs
src/paginated_query_as/builders/: mod.rs  paginated_query_builder.rs  query_params_builder.rs
src/paginated_query_as/builders/query_builders/: mod.rs  postgres_query_builder.rs  query_builder.rs  sqlite_query_builder.rs
src/paginated_query_as/examples/: mod.rs  paginated_query_builder_advanced_examples.rs  query_builder_examples.rs
src/paginated_query_as/internal/: column_protection_internal.rs  const_internal.rs  deserializers_internal.rs  internal_utils.rs  mod.rs  models_internal.rs
src/paginated_query_as/internal/deserializers/: mod.rs  page_deserialize.rs  page_size_deserialize.rs  search_columns_deserialize.rs  search_deserialize.rs
src/paginated_query_as/internal/dialects/: mod.rs  postgres_dialect.rs  postgres_dialect_utils.rs  query_dialect.rs  sqlite_dialect.rs
src/paginated_query_as/internal/protection/: column_protection.rs  column_protection_consts.rs  mod.rs
