[package]
name = "sqlx-paginated"
version = "0.2.25"
edition = "2021"
authors = ["@alexandrughinea"]
description = "A flexible, type-safe SQLx query builder for dynamic web APIs, offering seamless pagination, searching, filtering, and sorting."
license = "MIT"
repository = "https://github.com/alexandrughinea/sqlx-paginated"
documentation = "https://docs.rs/sqlx-paginated"

[features]
tracing = ["tracing/default"]
postgres = ["sqlx/postgres"]
mysql= ["sqlx/mysql"] # - Q2 2025
sqlite = ["sqlx/sqlite"] #- Q1 2025
default = ["postgres"]

[lib]
path = "src/lib.rs"

[dependencies]
sqlx = { version = "0.8.2", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "sqlite",
    "uuid",
    "chrono",
    "json"
] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
chrono = { version = "0.4.38", features = ["serde"] }
tracing = "0.1.40"
hex = "0.4.3"