[package]
name = "sqlx-paginated"
version = "0.2.29"
edition = "2021"
authors = ["@alexandrughinea"]
description = "A flexible, type-safe SQLx query builder for dynamic web APIs, offering seamless pagination, searching, filtering, and sorting."
license = "MIT"
repository = "https://github.com/alexandrughinea/sqlx-paginated"
documentation = "https://docs.rs/sqlx-paginated"

[features]
tracing = ["tracing/default"]
postgres = ["sqlx/postgres"]
mysql= ["sqlx/mysql"] # - Q2 2025
sqlite = ["sqlx/sqlite"] #- Q1 2025
default = ["postgres"]

[lib]
path = "src/lib.rs"

[dependencies]
sqlx = { version = "0.8.2", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "sqlite",
    "uuid",
    "chrono",
    "json"
] }
chrono = { version = "0.4.39", features = ["serde"] }
tracing = { version = "0.1.41", default-features = false }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"

